# Optymalizacja

./: Optymalizacja.sln
Excele/: fib_tab2_output.csv  lag_tab2_output.csv  symulacja_lab1_fib.csv  xlsx1.xlsx
Optymalizacja/: Optymalizacja.vcxproj  lab4_zad5b.csv  main.cpp  matrix.h  opt_alg.cpp  symulacja_lab1.csv  trace_CG_005.csv  trace_CG_025.csv  trace_CG_zk.csv  trace_Newton_005.csv  trace_Newton_025.csv  trace_Newton_zk.csv  trace_SD_005.csv  trace_SD_025.csv  trace_SD_zk.csv  user_funs.cpp  user_funs.h
optymalizacja-lab4_golmento/optymalizacja-lab4_golmento/: CMakeLists.txt  main.cpp  ode_solver.h  opt_alg.cpp  opt_alg.h  user_funs.cpp  user_funs.h
